WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201839
REGRESSION (
r249907
): Fix build failure in MockNfcService.mm
https://bugs.webkit.org/show_bug.cgi?id=201839
Summary
REGRESSION (r249907): Fix build failure in MockNfcService.mm
David Kilzer (:ddkilzer)
Reported
2019-09-16 13:27:12 PDT
Fix build failure in MockNfcService.mm.
Attachments
Patch v1
(1.43 KB, patch)
2019-09-16 13:29 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2019-09-16 13:29:28 PDT
Created
attachment 378890
[details]
Patch v1
Radar WebKit Bug Importer
Comment 2
2019-09-16 13:40:23 PDT
<
rdar://problem/55412493
>
David Kilzer (:ddkilzer)
Comment 3
2019-09-16 13:43:22 PDT
Comment on
attachment 378890
[details]
Patch v1 Keith Rollin verified this fixed the build on his Mac => cq+.
Ryan Haddad
Comment 4
2019-09-16 13:52:46 PDT
Comment on
attachment 378890
[details]
Patch v1 Clearing flags on attachment: 378890 Committed
r249916
: <
https://trac.webkit.org/changeset/249916
>
Ryan Haddad
Comment 5
2019-09-16 13:52:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug