Fix build failure in MockNfcService.mm <https://webkit.org/b/201839>

Patch by David Kilzer <ddkilzer@apple.com> on 2019-09-16
Reviewed by Brady Eidson.

* UIProcess/WebAuthentication/Mock/MockNfcService.mm:
Specify instance variable names for @synthesized variables that
need to be manually released in -dealloc under MRR.

Canonical link: https://commits.webkit.org/215470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249916 268f45cc-cd09-0410-ab3c-d52691b4dbfc